--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "standup-randomizer",
+  "name": "standup-randomizer-api",
   "version": "1.0.0",
-  "description": "A modern web application for generating random speaking order for stand-up meetings",
-  "main": "server.js",
+  "description": "API for Stand-up Randomizer with GitHub integration",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "node server.js"
+    "dev": "vercel dev",
+    "build": "echo 'No build step required'",
+    "start": "vercel dev"
   },
   "keywords": [
     "standup",
     "randomizer",
-    "meeting",
-    "queue",
-    "generator"
+    "github-api",
+    "vercel",
+    "serverless"
   ],
   "author": "Your Name",
   "license": "MIT",
-  "dependencies": {
-    "express": "^4.18.2"
+  "dependencies": {},
+  "devDependencies": {
+    "vercel": "^32.0.0"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   }
 } 
