Fix Vercel deployment: add public directory structure

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "vercel dev",
-    "build": "echo 'No build step required'",
+    "build": "echo 'Build completed - static files in public directory'",
     "start": "vercel dev"
   },
   "keywords": [
