--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,26 @@
 {
   "version": 2,
   "name": "standup-randomizer-api",
+  "builds": [
+    {
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "public/**/*",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
+    }
+  ],
   "functions": {
     "api/update-participants.js": {
       "maxDuration": 30
