--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "standup-randomizer-api",
+  "name": "standup-randomizer-api-v2",
   "builds": [
     {
       "src": "api/**/*.js",
