Update project name and API URL to match actual Vercel deployment

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "name": "standup-randomizer-api-2024",
+  "name": "standup-random",
   "builds": [
     {
       "src": "api/**/*.js",
